// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисует компонент для десктопа 1`] = `
<div
  className="BillingFrameNewCard BillingFrameNewCard_platform_desktop"
>
  <Loader
    color="blue"
    size="l"
    type="dots"
  />
  <script
    nonce="nonce"
    src="https://static.yoomoney.ru/checkout-ui/v1/checkout-ui.js"
  />
</div>
`;

exports[`правильно рисует компонент для мобилки 1`] = `
<div
  className="BillingFrameNewCard BillingFrameNewCard_platform_mobile"
>
  <Loader
    color="blue"
    size="l"
    type="dots"
  />
  <script
    nonce="nonce"
    src="https://static.yoomoney.ru/checkout-ui/v1/checkout-ui.js"
  />
</div>
`;
